--- a/index.html
+++ b/index.html
@@ -26,52 +26,65 @@
             <div class="col-12 pt-3">
                 <form>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label for="nRead">Current Reading(Curr)</label>
+                        <input id="nRead" onkeyup="updateUnits()" type="number" class="form-control" >
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="pRead">Previous Reading(Prev)</label>
+                        <input id="pRead" onkeyup="updateUnits()" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label for="cons">Consumption(Cons)</label>
+                        <input id="cons" onkeyup="ecUpdate(this.value)" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="fix">Fixed Charges</label>
+                        <input id="fix" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="mRent">Meter Rent</label>
+                        <input id="mRent" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="EC">Energy Charges</label>
+                        <input id="EC" type="number" class="form-control" step="0.01">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="duty">Duty</label>
+                        <input id="duty" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
                     <div class="form-group">
-                        <label for="nRead">Current Reading</label>
-                        <input type="number" class="form-control" id="nRead" aria-describedby="emailHelp">
+                        <label  for="fuel">Fuel Subcharges</label>
+                        <input id="fuel" type="number" class="form-control">
+                        <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
+                    </div>
+                    <div class="form-group">
+                        <label  for="subsidy">Govt Subsidy</label>
+                        <input id="subsidy" type="number" class="form-control">
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
 
-                    <button type="submit" class="btn btn-primary d-block m-auto">Submit</button>
+                    <button type="button" onclick="calculate(e)" class="btn btn-primary d-block m-auto">Submit</button>
+
+                    <!-- <div class="form-group">
+                        <label  for="amount">Payable</label>
+                        <input id="amount" type="number" class="form-control">
+                        <small id="nReadError" class="form-text ">Please fill</small>
+                    </div> -->
 
                     <div class="form-group text-center" id="billAmount">
-                        <label for="nRead">Bill Payable</label>
-                        <h3>123.45</h3>
+                        <label>Bill Payable</label>
+                        <h3 id="amountDisplay"></h3>
                     </div>
+
+                    <button type="reset" class="btn btn-primary d-block m-auto">Reset</button>
 
                 </form>
             </div>
@@ -91,6 +104,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <script src="./script.js"></script> 
 </body>
 
 </html>
