--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row" id="headRow">
             <div class="col-12 py-3 ">
-                <img src="/eb.png" alt="" width="100px">
+                <img src="./eb.png" alt="" width="100px">
                 <h2>Bill Calculator</h2>
             </div>
         </div>
