--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </div>
         <div class="row" id="inputRow">
             <div class="col-12 pt-3">
-                <p class="text-muted">മീറ്റർ റീഡിങ് നോക്കി ബിൽ തുക കണ്ടെത്താൻ മീറ്ററിൽ നിന്ന് പുതിയ റീഡിങ്ങും , തൊട്ട് മുമ്പത്തെ ബിലിലെ
+                <p class="text-muted">മീറ്റർ റീഡിങ് നോക്കി ബിൽ തുക കണ്ടെത്താൻ മീറ്ററിൽ നിന്ന് പുതിയ റീഡിങ്ങും , തൊട്ട്
+                    മുമ്പത്തെ ബിലിലെ
                     റീഡിങ്ങും ഒന്നും രണ്ടും കോളങ്ങളിൽ പൂരിപ്പിക്കുക .</p>
                 <form>
                     <div class="form-group">
@@ -73,7 +74,8 @@
                         <!-- <small id="nReadError" class="form-text ">Please fill</small> -->
                     </div>
 
-                    <button type="button" onclick="calculate(e)" class="btn btn-primary d-block mx-auto mt-4">Submit</button>
+                    <button type="button" onclick="calculate(e)"
+                        class="btn btn-primary d-block mx-auto mt-4">Submit</button>
 
                     <!-- <div class="form-group">
                         <label  for="amount">Payable</label>
@@ -89,17 +91,15 @@
                     <button type="reset" class="btn btn-primary d-block m-auto">Reset</button>
 
                     <div class="mt-5 p-2">
-                            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                            <!-- KSEB Bill calc -->
-                            <ins class="adsbygoogle"
-                                 style="display:block"
-                                 data-ad-client="ca-pub-3413531690941227"
-                                 data-ad-slot="6186786860"
-                                 data-ad-format="auto"
-                                 data-full-width-responsive="true"></ins>
-                            <script>
-                                 (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                        <!-- KSEB Bill calc -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3413531690941227"
+                            data-ad-slot="6186786860" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                        <script data-ad-client="ca-pub-3413531690941227" async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     </div>
 
                 </form>
