--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
                     <button type="reset" class="btn btn-primary d-block m-auto">Reset</button>
 
-                    <div class="mt-5 p-2">
+                    <!-- <div class="mt-5 p-2">
                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- KSEB Bill calc -->
+                        KSEB Bill calc
                         <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3413531690941227"
                             data-ad-slot="6186786860" data-ad-format="auto" data-full-width-responsive="true"></ins>
                         <script>
@@ -100,7 +100,7 @@
                         </script>
                         <script data-ad-client="ca-pub-3413531690941227" async
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    </div>
+                    </div> -->
 
                 </form>
             </div>
